# classdiagrampy

./: .flake8  LICENSE  README.md  class-diagram-example-drawio.xml  class-diagram-services-banking-drawio.xml  main.py  pyproject.toml
src/: document_writer.py  graph.py  xml_handler.py
tests/: test_diagram_handler.py  test_graph.py
tests/files/: class-diagram-example-drawio.xml
