[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ClassDiagramPython"
description = "Translate UML Class Diagram from Draw.io xml to Python script"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["class", "diagram", "uml", 'python']
license = {text = "MIT License"}
classifiers = [
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
]
dependencies = []
dynamic = ["version"]

[project.scripts]
my-script = "classdiagrampy.main:run"